[gd_scene load_steps=9 format=3 uid="uid://cm3gp7xxb4x4m"]

[ext_resource type="PackedScene" uid="uid://bnt3ai6sw00pi" path="res://scenes/player.tscn" id="1_nqulh"]
[ext_resource type="Script" path="res://scenes/hotel.gd" id="1_qxg7c"]
[ext_resource type="PackedScene" uid="uid://vy782oevjhkv" path="res://scenes/hotel_p.tscn" id="2_qfa05"]
[ext_resource type="PackedScene" uid="uid://drcasvqsmy0g7" path="res://scenes/level_menu.tscn" id="4_2sxoe"]
[ext_resource type="Texture2D" uid="uid://ycnn27ipdini" path="res://image/perga.png" id="4_wbyvn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3aixi"]
size = Vector2(18.5, 73)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ky6u2"]
size = Vector2(65.5, 65)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xycqs"]
size = Vector2(63, 30)

[node name="hotel" type="Node2D"]
position = Vector2(262, 184)
script = ExtResource("1_qxg7c")

[node name="Player" parent="." instance=ExtResource("1_nqulh")]
position = Vector2(-473, 102)

[node name="ParallaxBackground" parent="." instance=ExtResource("2_qfa05")]
follow_viewport_enabled = true
scroll_ignore_camera_zoom = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(228, -18.5)
shape = SubResource("RectangleShape2D_3aixi")

[node name="Label" type="Label" parent="Area2D"]
offset_left = 216.0
offset_top = 25.0
offset_right = 256.0
offset_bottom = 48.0
metadata/_edit_use_anchors_ = true

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(982.75, -17)
shape = SubResource("RectangleShape2D_3aixi")

[node name="Label" type="Label" parent="Area2D2"]
offset_left = 972.0
offset_top = 26.0
offset_right = 1012.0
offset_bottom = 49.0
metadata/_edit_use_anchors_ = true

[node name="Area2D3" type="Area2D" parent="."]

[node name="Label" type="Label" parent="Area2D3"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1199.0
offset_top = 47.0
offset_right = 1262.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
position = Vector2(1225.25, -21.5)
shape = SubResource("RectangleShape2D_ky6u2")
debug_color = Color(0.584314, 0.54902, 0.0117647, 0.419608)

[node name="level_menu" parent="Area2D3" instance=ExtResource("4_2sxoe")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1221.0
offset_top = -33.0
offset_right = 1221.0
offset_bottom = -33.0
grow_horizontal = 1
grow_vertical = 1

[node name="Area2D4" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
position = Vector2(-17.5, -10)
shape = SubResource("RectangleShape2D_xycqs")
debug_color = Color(0, 1, 0.243137, 0.419608)

[node name="Label" type="Label" parent="Area2D4"]
offset_left = -54.0
offset_top = 41.0
offset_right = -14.0
offset_bottom = 64.0
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="Area2D4"]
visible = false
self_modulate = Color(0.454902, 0.454902, 0.454902, 1)
show_behind_parent = true
position = Vector2(-11, -44)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_wbyvn")

[node name="pergamena" type="Label" parent="Area2D4/Sprite2D"]
modulate = Color(0.898039, 0, 0.0470588, 1)
offset_left = -190.0
offset_top = -212.0
offset_right = 225.0
offset_bottom = 227.0
text = "     
       CIAO,chiunque tu sia,SONO IL 
      PROPRIETARIO DI QUESTO HOTEL. 
     SICCOME NON VOGLIO SVELARTI IL 
    MIO NOME PUOI,per adesso, CHIAMARMI
  \"CREATOR\". MI SCUSO SE NON SONO PRESENTE
(pensavi fossi quel maghetto,eh. No quello Ã¨ inutile,
serve soltanto a mostrarti la lettera, proprio inutile)
 MA HO AVUTO UN CONTRATTEMPO, MI DISPIACE.
SPERO TU POSSA DIVERTITI IN QUESTO PERIODO
DI \"PROVA\",(si lo so che ci sono poche
persone nell'hotel,NON CRITICATEMI, LO SAI QUANTO
DIFFICILE SIA TROVARE PERSONE). MI AUGURO CHE
TU POSSA DIVERTIRTI.
 IO TI SALUTO, ADIEUS.        
                                                                    FIRMATO DA
                                                                       CREATOR
"

[node name="ColorRect" type="ColorRect" parent="Area2D4/Sprite2D"]
self_modulate = Color(0, 0, 0, 0.65098)
show_behind_parent = true
offset_left = -236.0
offset_top = -186.0
offset_right = 228.0
offset_bottom = 232.0

[node name="Label" type="Label" parent="."]
offset_left = -726.0
offset_top = -73.0
offset_right = -547.0
offset_bottom = 54.0
text = "COMANDI!
FRECCE &(a-d-w-s): MOVIMENTO
C : CORSA
V-MOUSE SINISTRO : ATTACCO
SPAZIO : SALTO
H&ENTER : INTERAGIRE
"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_area_2d_2_body_exited"]
[connection signal="body_entered" from="Area2D3" to="." method="_on_area_2d_3_body_entered"]
[connection signal="body_exited" from="Area2D3" to="." method="_on_area_2d_3_body_exited"]
[connection signal="body_entered" from="Area2D4" to="." method="_on_area_2d_4_body_entered"]
[connection signal="body_exited" from="Area2D4" to="." method="_on_area_2d_4_body_exited"]
